--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.company'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2-SNAPSHOT'
 
 java {
 	sourceCompatibility = '17'
@@ -31,13 +31,6 @@ dependencies {
 	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 	implementation 'io.github.openfeign:feign-micrometer'
 
-
-	/*implementation(platform("io.micrometer:micrometer-tracing-bom:1.0.0"))
-	implementation("io.micrometer:micrometer-tracing")
-	implementation("io.micrometer:micrometer-tracing-bridge-otel")
-	implementation "io.opentelemetry:opentelemetry-exporter-zipkin"
-	implementation 'io.github.openfeign:feign-micrometer:12.4'*/
-
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	/*implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'*/
@@ -45,6 +38,13 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	// rabbitmq
+	//implementation 'org.springframework.boot:spring-boot-starter-stream-rabbit'
+	implementation 'org.springframework.cloud:spring-cloud-stream'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
+	//implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit:4.0.4'
+
+
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok'
