--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
     application:
         name: book-service
     config:
-        import: "optional:configserver:http://localhost:8088"
+        import: "optional:configserver:http://192.168.32.1:8088"
