--- a/config-server/src/main/resources/config/author-service.yml
+++ b/config-server/src/main/resources/config/author-service.yml
@@ -3,7 +3,7 @@ eureka:
     healthcheck:
       enabled: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://192.168.32.1:8761/eureka
     should-unregister-on-shutdown: true
   instance:
     lease-renewal-interval-in-seconds: 30
@@ -31,10 +31,18 @@ server:
 spring:
   application:
     name: author-service
+  rabbitmq:
+    addresses: 192.168.32.1:5672
+  cloud:
+    stream:
+      bindings:
+        onReceive-in-0:
+          destination: bookSupplier-out-topic
+          group: author-service-group
 logging:
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%X{traceId:-},%X{spanId:-}] ${LOG_LEVEL_PATTERN:-%5p} %m%n"
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://192.168.32.1:9411
   micrometer:
     enabled: true
