--- a/service-discovery/src/main/resources/application.yml
+++ b/service-discovery/src/main/resources/application.yml
@@ -5,7 +5,7 @@ eureka:
             enabled: true
         registerWithEureka: false
     instance:
-        hostname: localhost
+        hostname: 192.168.32.1
         lease-expiration-duration-in-seconds: 30
         lease-renewal-interval-in-seconds: 30
         prefer-ip-address: true
@@ -19,4 +19,4 @@ server:
     port: 8761
 spring:
     application:
-        name: localhost
+        name: 192.168.32.1
